// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value:  1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        Target page: 
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
        id="scan-date-text"
      >
        Scan date: 2018-03-12 11:24 PM UTC
      </span>
      <span
        aria-hidden="true"
        aria-labelledby="scan-date-text"
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: description-text 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        Target page: 
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
        id="scan-date-text"
      >
        Scan date: 2018-03-12 11:24 PM UTC
      </span>
      <span
        aria-hidden="true"
        aria-labelledby="scan-date-text"
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <CommentIcon />
      </span>
      <span
        className="screen-reader-only"
        id="comment-text"
      >
        Comment: description-text
      </span>
      <span
        aria-hidden="true"
        aria-labelledby="comment-text"
        className="text description-text"
      >
        description-text
      </span>
    </li>
  </ul>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: null 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        Target page: 
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
        id="scan-date-text"
      >
        Scan date: 2018-03-12 11:24 PM UTC
      </span>
      <span
        aria-hidden="true"
        aria-labelledby="scan-date-text"
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;

exports[`DetailsSection rendering of comment row is dependent on description value renders and matches saved snapshot for description value: undefined 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        Target page: 
      </span>
      <span
        className="text"
      >
        <NewTabLink
          href="https://page-url/"
        >
          https://page-url/
        </NewTabLink>
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
        id="scan-date-text"
      >
        Scan date: 2018-03-12 11:24 PM UTC
      </span>
      <span
        aria-hidden="true"
        aria-labelledby="scan-date-text"
        className="text"
      >
        2018-03-12 11:24 PM UTC
      </span>
    </li>
  </ul>
</div>
`;
